Refactor index.html for SEO and layout improvements
Updated the HTML structure and improved meta tags for better SEO. Adjusted styles and layout for a more modern look.

--- a/index.html
+++ b/index.html
@@ -1,133 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stray8 | Custom Anime & Graffiti Sneakers in India</title>
-    <meta name="description" content="Stray8 is India's leading custom sneaker brand. Wear what you want with our hand-painted anime, graffiti, and unique designs. Turn your thoughts into reality.">
-    <meta name="keywords" content="custom sneakers India, anime sneakers India, hand-painted sneakers India, customised shoes online India, graffiti sneakers India, unique sneakers, streetwear India">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.stray8.in/">
-    <meta property="og:title" content="Stray8 | Custom Anime & Graffiti Sneakers in India">
-    <meta property="og:description" content="Stray8 is India's leading custom sneaker brand. Wear what you want with our hand-painted anime, graffiti, and unique designs. Turn your thoughts into reality.">
-    <meta property="og:image" content="assets/og-hero.png">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.stray8.in/">
-    <meta property="twitter:title" content="Stray8 | Custom Anime & Graffiti Sneakers in India">
-    <meta property="twitter:description" content="Stray8 is India's leading custom sneaker brand. Wear what you want with our hand-painted anime, graffiti, and unique designs. Turn your thoughts into reality.">
-    <meta property="twitter:image" content="assets/og-hero.png">
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Stray8 | Custom Anime & Graffiti Sneakers in India</title>
+  <meta name="description" content="Stray8 - custom anime & graffiti sneakers" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-content">
-            <h1>Wear What You Want</h1>
-            <p>We turn your thoughts into reality — India’s sneaker customization brand.</p>
-            <a href="#custom" class="btn">Customize Now</a>
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="brand">
+        <div class="logo">Stray8</div>
+        <div class="tag">Wear What You Want</div>
+      </div>
+      <nav class="nav">
+        <a href="#custom">Customize</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#about">About</a>
+        <a href="#contact" class="btn btn-primary">Order</a>
+      </nav>
+      <button class="mobile-menu" id="mobileToggle" aria-label="Toggle menu">☰</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container hero-grid">
+        <div class="hero-copy">
+          <h1>Wear What You Want</h1>
+          <p class="lead">We turn your thoughts into reality — India’s sneaker customization brand.</p>
+          <a href="#custom" class="btn btn-primary large">Customize Now</a>
         </div>
         <div class="hero-image">
-            <img src="assets/hero.png" alt="Custom designed Stray8 sneakers with vibrant anime art" loading="eager">
+          <img src="hero.png" alt="Stray8 hero sneaker" />
         </div>
-    </header>
+      </div>
+    </section>
 
-    <main>
-        <section id="custom" class="customizer">
-            <h2>Design Your Own Sneaker</h2>
-            <div class="sneaker-display">
-                <img id="base-sneaker" src="assets/base-white.png" alt="White base sneaker for customization" class="base-sneaker">
-                <img id="overlay-sneaker" src="" alt="Custom design overlay on sneaker" class="overlay-sneaker hidden">
+    <section id="custom" class="container custom-section">
+      <h2>Design Your Own Sneaker</h2>
+
+      <div class="custom-wrap">
+        <div class="display-panel" aria-hidden="false">
+          <div class="sneaker-stage">
+            <img id="baseSneaker" src="base-white.png" alt="Base sneaker" class="base-img" />
+            <img id="overlaySneaker" src="" alt="Design overlay" class="overlay-img hidden" />
+          </div>
+          <canvas id="exportCanvas" class="hidden" />
+        </div>
+
+        <aside class="controls">
+          <div class="control-group">
+            <label>Base color</label>
+            <div class="swatches">
+              <button class="swatch active" data-src="base-white.png" aria-label="White base"></button>
+              <button class="swatch" data-src="base-black.png" aria-label="Black base"></button>
             </div>
-            <div class="controls">
-                <div class="swatches">
-                    <button class="swatch white active" data-base="assets/base-white.png" aria-label="Select white base sneaker"></button>
-                    <button class="swatch black" data-base="assets/base-black.png" aria-label="Select black base sneaker"></button>
-                </div>
-                <div class="upload-section">
-                    <label for="upload-overlay" class="btn upload-btn">Upload Your Design</label>
-                    <input type="file" id="upload-overlay" accept="image/png, image/jpeg" aria-label="Upload custom design image">
-                    <span id="file-name" class="file-name">No file chosen</span>
-                </div>
-                <div class="presets">
-                    <button class="btn preset-btn" data-preset="assets/preset-1.png">Preset 1</button>
-                    <button class="btn preset-btn" data-preset="assets/preset-2.png">Preset 2</button>
-                </div>
-                <button id="download-sneaker" class="btn download-btn">Download Mockup</button>
-                <div id="error-message" class="error-message hidden" role="alert"></div>
+          </div>
+
+          <div class="control-group">
+            <label for="uploadInput">Upload your design</label>
+            <div class="file-row">
+              <input id="uploadInput" type="file" accept="image/png, image/jpeg" />
+              <div id="uploadName" class="file-name">No file chosen</div>
             </div>
-        </section>
+            <small class="muted">PNG with transparency works best.</small>
+          </div>
 
-        <section id="about" class="about">
-            <h2>About Stray8</h2>
-            <p>Stray8 is more than just a brand; it's a canvas for self-expression. Born from a passion for sneaker culture, anime, and vibrant graffiti art, we specialize in transforming ordinary sneakers into extraordinary, wearable masterpieces. Every pair is meticulously hand-painted or printed locally in India, ensuring premium quality and a unique touch. We believe your sneakers should tell your story, be it a beloved anime character, a bold graffiti tag, or a minimalist statement. At Stray8, no two sneakers are the same – because your individuality deserves a one-of-a-kind design. Join us in wearing what you want.</p>
-        </section>
-
-        <section id="how-it-works" class="how-it-works">
-            <h2>How It Works</h2>
-            <div class="steps-grid">
-                <div class="step">
-                    <span>1</span>
-                    <h3>Pick Base Sneaker</h3>
-                    <p>Choose your preferred base color: classic white or sleek black.</p>
-                </div>
-                <div class="step">
-                    <span>2</span>
-                    <h3>Submit Your Design</h3>
-                    <p>Upload your artwork directly or DM us on Instagram with your concept.</p>
-                </div>
-                <div class="step">
-                    <span>3</span>
-                    <h3>Approve Preview</h3>
-                    <p>We'll create a digital mockup for your approval before we start painting.</p>
-                </div>
-                <div class="step">
-                    <span>4</span>
-                    <h3>Receive Your Sneakers</h3>
-                    <p>Your custom Stray8 sneakers will be delivered to you in 7-10 days.</p>
-                </div>
+          <div class="control-group">
+            <label>Presets</label>
+            <div class="preset-row">
+              <button class="preset" data-src="preset-1.png">Preset 1</button>
+              <button class="preset" data-src="preset-2.png">Preset 2</button>
             </div>
-        </section>
+          </div>
 
-        <section id="gallery" class="gallery">
-            <h2>Our Custom Creations</h2>
-            <div class="gallery-grid">
-                <img src="https://via.placeholder.com/600x400/FF2B70/FFFFFF?text=Anime+Dragon+Sneaker" alt="Custom anime dragon design on white sneaker, Stray8 artwork">
-                <img src="https://via.placeholder.com/600x400/00EAFF/000000?text=Graffiti+Art+Sneaker" alt="Vibrant graffiti art custom design on black sneaker, streetwear style">
-                <img src="https://via.placeholder.com/600x400/FFFFFF/FF2B70?text=Minimalist+Custom" alt="Minimalist custom design on a white sneaker, clean aesthetic">
-                <img src="https://via.placeholder.com/600x400/000000/00EAFF?text=Character+Custom" alt="Custom sneaker featuring a popular character, hand-painted detail">
-                <img src="https://via.placeholder.com/600x400/FF2B70/00EAFF?text=Abstract+Design" alt="Abstract art custom sneaker with bold colors, artistic footwear">
-                <img src="https://via.placeholder.com/600x400/00EAFF/FF2B70?text=Logo+Integration" alt="Custom sneaker integrating a client's logo, personalized branding">
-            </div>
-            <p class="instagram-cta">See more on our Instagram: <a href="https://instagram.com/stray8_in" target="_blank" rel="noopener noreferrer">@stray8_in</a></p>
-        </section>
+          <div class="control-group">
+            <button id="downloadBtn" class="btn btn-primary full">Download Mockup</button>
+            <button id="clearOverlay" class="btn full">Clear Design</button>
+          </div>
 
-        <section id="contact" class="contact">
-            <h2>Contact Us</h2>
-            <p>Ready to get your unique custom sneakers?</p>
-            <a href="https://wa.me/919876543210?text=Hi%20Stray8!%20I%20want%20a%20custom%20sneaker." target="_blank" rel="noopener noreferrer" class="btn whatsapp-btn">WhatsApp Us Now</a>
-            <p>Or DM us on Instagram <a href="https://instagram.com/stray8_in" target="_blank" rel="noopener noreferrer">@stray8_in</a></p>
-            <!-- Future form integration placeholder
-            <form id="contact-form" action="#" method="POST" data-netlify="true">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Tell us about your design idea!" rows="5" required></textarea>
-                <button type="submit" class="btn">Send Inquiry</button>
-            </form>
-            -->
-        </section>
-    </main>
+          <div id="message" class="muted small"></div>
+        </aside>
+      </div>
 
-    <footer>
-        <p>&copy; 2025 Stray8 — All rights reserved. Made with ❤️ for sneakerheads.</p>
-    </footer>
+    </section>
 
-    <script src="js/app.js"></script>
+    <section id="about" class="container section">
+      <h2>About Stray8</h2>
+      <p>Stray8 is more than a brand — it's a canvas for self-expression. We handpaint and print locally in India, turning your ideas into wearable art.</p>
+    </section>
+
+    <section id="gallery" class="container section">
+      <h2>Our Custom Creations</h2>
+      <div class="gallery-grid">
+        <img src="https://via.placeholder.com/600x400/FF2B70/FFFFFF?text=Anime+Dragon+Sneaker" alt="">
+        <img src="https://via.placeholder.com/600x400/00EAFF/000000?text=Graffiti+Art+Sneaker" alt="">
+        <img src="https://via.placeholder.com/600x400/FFFFFF/FF2B70?text=Minimalist+Custom" alt="">
+      </div>
+    </section>
+
+    <section id="contact" class="container section">
+      <h2>Contact</h2>
+      <p>Order via WhatsApp: <a href="https://wa.me/919876543210" target="_blank">+91 98765 43210</a></p>
+    </section>
+
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <div>&copy; <span id="year"></span> Stray8 — All rights reserved.</div>
+      <div class="muted small">Made with ❤️ for sneakerheads</div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
