--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/assets/t1.png" alt="Custom Stray8 Sneaker" class="hero-shoe">
+                <img src="assets/t12.png" alt="Custom Stray8 Sneaker" class="hero-shoe">
             </div>
         </div>
         <div class="scroll-indicator">
@@ -98,73 +98,73 @@
             <p class="section-subtitle">Every pair tells a story. What's yours?</p>
             <div class="gallery-grid">
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t2.png" alt="Custom Sneaker Design 1">
+                    <img src="assets/t11.jpeg" alt="Custom Sneaker Design 1">
                     <div class="gallery-overlay">
                         <p>Anime Custom</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t3.png" alt="Custom Sneaker Design 2">
+                    <img src="assets/t4.jpeg" alt="Custom Sneaker Design 2">
                     <div class="gallery-overlay">
                         <p>Dragon Flame</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="character">
-                    <img src="assets/t4.png" alt="Custom Sneaker Design 3">
+                    <img src="assets/t12.jpeg" alt="Custom Sneaker Design 3">
                     <div class="gallery-overlay">
                         <p>Character Art</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t5.png" alt="Custom Sneaker Design 4">
+                    <img src="assets/t5.jpeg" alt="Custom Sneaker Design 4">
                     <div class="gallery-overlay">
                         <p>Ocean Warrior</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="character">
-                    <img src="assets/t6.png" alt="Custom Sneaker Design 5">
+                    <img src="assets/t6.jpeg" alt="Custom Sneaker Design 5">
                     <div class="gallery-overlay">
                         <p>Pop Culture</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="pattern">
-                    <img src="assets/t7.png" alt="Custom Sneaker Design 6">
+                    <img src="assets/t11.jpeg" alt="Custom Sneaker Design 6">
                     <div class="gallery-overlay">
                         <p>Abstract Design</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="tshirt">
-                    <img src="assets/t8.png" alt="Custom T-shirt Design 1">
+                    <img src="assets/t8.jpeg" alt="Custom T-shirt Design 1">
                     <div class="gallery-overlay">
                         <p>Custom Tee</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="pattern">
-                    <img src="assets/t9.png" alt="Custom Sneaker Design 7">
+                    <img src="assets/t3.jpeg" alt="Custom Sneaker Design 7">
                     <div class="gallery-overlay">
                         <p>Colorful Pattern</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="character">
-                    <img src="assets/t10.png" alt="Custom Sneaker Design 8">
+                    <img src="assets/t7.jpeg" alt="Custom Sneaker Design 8">
                     <div class="gallery-overlay">
                         <p>Iconic Character</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t11.png" alt="Custom Sneaker Design 9">
+                    <img src="assets/t11.jpeg" alt="Custom Sneaker Design 9">
                     <div class="gallery-overlay">
                         <p>Anime Warriors</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t12.png" alt="Custom Sneaker Design 10">
+                    <img src="assets/t12.jpeg" alt="Custom Sneaker Design 10">
                     <div class="gallery-overlay">
                         <p>Dual Design</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t13.png" alt="Custom Sneaker Design 11">
+                    <img src="assets/t13.jpeg" alt="Custom Sneaker Design 11">
                     <div class="gallery-overlay">
                         <p>Lightning Strike</p>
                     </div>
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="tshirt">
-                    <img src="assets/t15.png" alt="Custom T-shirt Design 2">
+                    <img src="assets/t9.jpeg" alt="Custom T-shirt Design 2">
                     <div class="gallery-overlay">
                         <p>Streetwear Tee</p>
                     </div>
@@ -194,25 +194,25 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t18.png" alt="Custom Sneaker Design 15">
+                    <img src="assets/t3.jpeg" alt="Custom Sneaker Design 15">
                     <div class="gallery-overlay">
                         <p>Warrior Spirit</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="pattern">
-                    <img src="assets/t19.png" alt="Custom Sneaker Design 16">
+                    <img src="assets/t7.jpeg" alt="Custom Sneaker Design 16">
                     <div class="gallery-overlay">
                         <p>Mystical Art</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t20.png" alt="Custom Sneaker Design 17">
+                    <img src="assets/t11.jpeg" alt="Custom Sneaker Design 17">
                     <div class="gallery-overlay">
                         <p>Dragon Power</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="pattern">
-                    <img src="assets/t21.png" alt="Custom Sneaker Design 18">
+                    <img src="assets/t13.jpeg" alt="Custom Sneaker Design 18">
                     <div class="gallery-overlay">
                         <p>Ultimate Design</p>
                     </div>
@@ -422,4 +422,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
