--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="assets/t12.png" alt="Custom Stray8 Sneaker" class="hero-shoe">
+                <img src="assets/t12.jpeg" alt="Custom Stray8 Sneaker" class="hero-shoe">
             </div>
         </div>
         <div class="scroll-indicator">
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="pattern">
-                    <img src="assets/t14.png" alt="Custom Sneaker Design 12">
+                    <img src="assets/t14.jpeg" alt="Custom Sneaker Design 12">
                     <div class="gallery-overlay">
                         <p>Vibrant Swoosh</p>
                     </div>
@@ -422,5 +422,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
