--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="anime">
-                    <img src="assets/t4.png" alt="Custom Sneaker Design 14">
+                    <img src="assets/t4.jpeg" alt="Custom Sneaker Design 14">
                     <div class="gallery-overlay">
                         <p>Epic Battle</p>
                     </div>
@@ -422,6 +422,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
